--- a/CUS Tutorial/frmMain.resx
+++ b/CUS Tutorial/frmMain.resx
@@ -117,29 +117,168 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnUserManagement.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="ToolStripSplitButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAAA4CAYAAABNGP5yAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
-        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsSAAALEgHS3X78AAAEFElEQVRoQ93aS+gVVQDH8b+l
-        SWGCqBSVD0JQrDb2EFqUoWHpRjcmCKlFIZX0oCJxYYW1SCgDbdHCcBW+LYTQwtDSRQ9sU5EJRWm+UKL8
-        l2U+vj/xhl5+c86Z1/3P9QefzZ17zpmZO3fmnDOnp0Ruw2vYicP4B//iKHZjGe7CZZdR+BBnE32Kcbgs
-        cjeOwR1oyJ94AF2dMfgd7gBT/I070LX5HO7A8vgW/dF1mQZ3QEU8jK7LeriDKWIHuir9UOa/3+4/XIOu
-        yU1wB1LGBKRmBF7BZzgI/Rj7sR0vYThqzS1wB1HGfUjJCzgJV0fLH5iH2lLHFXA7YnkZrmyWx1FL9Ng6
-        DddoUdcjlDtxBq5sFl0pN6OW/ALXaBHqEOnGGsomuLIxK1BL1J93DRbxHUIZiNj/PssB1JJ34Ros4gOE
-        olGmK5dqKCqN7gFfwTVWxI8YhKzoBunKpboBlUajONdQGXORlTJPHd2sKx9rLIBrrIwlyMqV0MSKKxfz
-        KyrPQ3CNlfEUQvkBrlyMbtaVp46e4CRk5SrshSsXswuxR2yhVHkT3IfQ/3QmXLlUtcxDDsNGuAbz+AQ3
-        IpRH4Mqmqm3qTaMu12AetyKWe+HKptLUXW35Ga7RFJoYvQKxDMD3cHXEaIq+1qyCazjFFqRGHaU9cPVk
-        2QbdQGuNxvGu8RR6nObJUrh6sjyJjuRjuB0I+Ropl//FuR+urizj0ZHoLq7XX24nnBMYi7xRj1DjBldn
-        u9r/++3RXJzbEedNFM090CSqq7elFx379VvJM0AKDXxSEpuSfxsdz3S4nXHmo0zegKu35Vl0PI/C7Yyz
-        CGUSm4zR5GnHsxJuZ5y1KJMv4Opt2YyORj213+B2xlEP8FoUScr0mOYPK58FCkX/ObcjIa8jb9QbVP/B
-        1dduK/TD1B4NVIrM2GqqagZSo+Fy3plojTSvQ22Zg7/gGk9xCnm6qxp96gmg57yrzzmO53A1KovWBFX5
-        elyXa541Q/pVlyPPlXcEryI29xDMaOhur9VfrpEy1Lt7D3lOxEisRp5XZrrq1mAikjMZGxDrglZBB/MR
-        1LFKHSzpveGXcPWF6J4SmovsmYpv4Ap3guYKn0HKI1MDJXWwivxI6jdc8tjULOpbcF/uC1oAocdmysKH
-        B6GXra6eEN0j/l+x9jTcl/qahtFaiToYoTwGVz5Gq1uHoOenCx801SHMRlZ0Bevv48rGzELuhQh9RU+N
-        rDm/d+DKxCyG3dBU6+DyItz3Y84vqHAbmmwK2rMQ7rsx78NuaDJ1ddujl63uuzHqg9gNTfY82lP0BGj9
-        s93QZFWeAHX87IYmq/IEaB2C3dBkVZ4ALf+zG5qsyhOg3qDd0GRVngCNO+yGJqvyBGi26fyQspu4fsAT
-        cN+N6Ok9B6/1sNJ1KlmZAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgnSURBVHhe7ZtZbBtVFIajgvoSL3HsxM5mOy99qBASqioh
+        eEC89YWtUJYHkJBAAiGKUAuoaktBqGrZSltK2tKS2k483p20yYQisQiJgkBCSDR2YtdOnDq7nZbSHUSH
+        czzXqe1cj2fGM0m3I31KdOfa89/fM3c5d6bmTtwu4eeWG4OjD5v8I1vMgVQHKb3FguOWNQdSDzR4R96u
+        9yU9Bnfi9zrP8LTeEbuqcw1xWleUq/ckOFv/LEc+cXOGKTB+nymQWm/yJlxGz8iveubUZF3X4BUdNBAb
+        WQ6jNwmNz3J2NnvjG2Dpja80+sZeMXpHDhu7kye0nkRa54hc0pJfUiqNgbFcw/OQ0yxtmH2pdrM38aLJ
+        k9xfzyR+NDCxVK07dkHX+ec1WiPkgJd+Uyhd1PjFNcDP3WX7+qzdEpy0kZKaWkfsvO6Ico0sh65riGvu
+        nVzQeMUNMH8zVds+cOZeG5t5HNhg7892WNnMcbjfTrUcm/qnKTyO95+XVK+hiVUafXeMazs6TW08QqSI
+        D1v/jMXKzj0IH34BGvmejc122dnZn1vY7HTplxdiCY3nBDX4Rv3kq1Q3wMDEOWvfLFVPHiLleqyEcbKd
+        nV1h659bA7/ea3Y2s8vKZntt7OxJ+MDF0i8QgyV0el7UYhlg9CQ5e3+GqqcQIoUP+MBGOzv1H62iXMwF
+        jUcWw4AGf4qqhQaRwgde0rRKcsEhZ4E4lQ3Aq42mpRxECh9KGkBrPKKaAdjT99B7eiGIFD6UMqAhkKKL
+        BGBCEyCnU8wAffewYE8vBJHChxIGNPhHqSLzKG2AwY09/QxVixiIFD5g3N5GqyQWk0+48YiSBvALmso9
+        vRBECh/VGGDyjVBFlqKUAdCXcHDFUrVIgUjhQ44B+AuYvOIajyhhgDkoracXgkjhQ6oB+AvghIMmshzV
+        GKDrinJNPRNULXIhUviQYgBMgeEelNZ4xORNhsjpJBmg6xrmWnunqFqqgUjhAwx4l1ZpAXDZYwdEE1oJ
+        OQbU4YLmmPyeXggihQ8xBuA9L7fxiFQD8qkrmhYlIFL4qGQACjEwp6hCxSLFgMLUlVoQKXwIGcA3Pk4V
+        KgWxBpSmrtSCSOGjnAFWbDzMuGhCpVLJgHKpK7UgUviAgq2lFbDxde7YAqFyAQPC5HQLDBBKXakFkcIH
+        FBQZgHNsvYKNR8oZUCl1pRZECh9QMG+AFYYdFFUoUgloBohJXakFkcIHFOQMwDFXDxOPQuFKUWqA2NSV
+        WhApfEDB1tZj06o1Hik0QErqSi2IFD6aw5Ob9Uzksv5I7KreMXxV3zV4Bbea9O7BywjuyCAa9/BF3Lio
+        dccv1Drj5zG/r2Hif2uYyDmNO3LO4Iz+ZWCGzhqY2BmDA3DF5+rc8WwdE8/CwmkHOR3mH/zW/owXhDAw
+        AnXD9NplZWcdcEV02tnMYZgDfGllswfgWIe9L7sP6u+FidhuTNRC2Sdw/EP47A6ovx2OfQC8D+U4nd8K
+        xzbD922y92XegeNvwbENUPYmHHsD6ryOCV/bQOZVIuVO3AkMjSuyTuuI9mhdkRDcrwGtM+qDv16NM8Jo
+        nNFujSvq0jgHnbWOyJFaV/QrrXPwkNYZOQh1DkDdDq0jsg/q7IW6ezSuwc/g+z6F/z+Guh9BvZ36rqGd
+        lkBiLTldTftAZrWtb/ZZxM7OPZOjf+7pPO39c+vmGcg+lQduiycRuKTXztOXfWIefmcqB1z+j+Xoyzya
+        B877SB5rz+QqIidnwJZ8Z6U0uJxtOTrFWUJphpwOOt3MYeyIlgIwLbd/YPAlvydy1DMAOr/5cb7QAFtf
+        5lCpsMUAh/n8usbgTf5A5KhjgNFbnLhcagOawuncHkJen6oGNAYWjvNFBsAwV3pcLfBHMPoWZrBUMSCX
+        uwuPU4UshQGt0Pfg5glNq+IG4InwhDQhSJEBbPYgrY6SYAYZV5k0rYiiBsBsj2ursEtjCac95HSqGoDL
+        eDGpOwOj0CiAGyMw3lLFFFJoQG6aS6lTLS29k6LXM4oY0BgUn75S0wDs6LDjpWksR3UGwL1VrrMrR6EB
+        sCjZT6sjB5xnyEnYyjYA02StMjI4ahiAu0VCHZ0QsgxAp7GToYmpRIkBHbQ6ooFLXsyOtBCSDcDODufR
+        VEEigGFw/jG5agzAxI0SyVpJBuADTzQxUigygM1+UXpcDPgcEE62aBqlIsoAvL9waKGJkUo1BuDmjNTd
+        6EoYPMnviBy6AZgWb4PLjSZIDkUG9GX30erQaOktP52tBkED6qGzU3pjUo4B5jJPnClBWQPwYafCZaxS
+        FBoA5n5Oq5MH1+3V7ESLYYEBuDcHIqmClAA6MB85naABzbmxXb30fJ4iA+Ae265UZ1eOIgPYzN7S43yq
+        qrqxXQpFBphDicbGwOhzTcHTu8yh9PHG0MSwJTR9pq1n4t9SoXIRMgA7W6V2ocVSZIBQNPhnNCB+jSWY
+        2gbz/4A5OPFHczA93RSeuSKlrygxYM/18vGiVNViYfAmvyVyqgiOW2YJJVfDVbMeprqdltDEiZbw5Fhr
+        aOaCrWfimpABaJ6Ux+yURhkDKgS+E2QJpp+HX3m3JTC2jhTXtPZM7tE7BlV/ZUaIRTFAMPzcclP49ENm
+        7+gmfJ0m946fc3ha3xW5otR0V4ilN0AotnF3t4TS9xsDqY2wCOuuc4/8hu8G5jZqKY2Rw41tgFBAv2Py
+        j63CFydhfeAwMolfcu8UOiOXtJ0nRd9WN68BFQKG9HvmX7hkkj/Vu4fHcFu/9F3EW9YAoWgOz64w+VMv
+        4YuaJl/qZVJ8O0dNzf/HX+54irraKwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>134, 17</value>
+  </metadata>
+  <metadata name="ToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>249, 17</value>
+  </metadata>
+  <data name="tsbOpen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAArfSURBVHhe7Zp7UFT3FcexNU3aOM2knb6StMlYG/saEwVf
+        k440mjYmsS2ZEUQBRVlAEOUlCj4AHzx3F/AB8pDn7oIKAoKo4DNAaq2K+MAkWBV81P7jTKcznUYQT8/3
+        cu9yd/fuurCbzjrdM/MZGcV7f5/zO7/z++0PPNzhDne4wx3u8PDw9/f3Wrx4sb+T+UNAQMC3xVe4bixZ
+        ssSXIWfD8uBhUFDQT8RXuWbwYGuysrKGbt26Rbdv36a+vj4j/f39Jty5c0fg7t27Ru7du2fk/v37RvBv
+        a9euHeTnZ4ivcs3gAeanpKQM9PT0UGtrK9XU1DiFM2fO0OHDh4mXQj+/Ztzw21wweICbY2NjH2HWTp06
+        Rfv27XManZ2dxEsAS2Ga+DrXC06AKjw8/DESgAEriYyVpqYmSkpKcu1lwINbgIZ1/vx5oWQLCgqcQn5+
+        PlVVVdHu3bvJz8/vrre393jxla4V2AI5CdTb20vd3d2KMzkazHtBRUUFBQYGPuYkX+FqM/C79A6Sx2P+
+        gTh8x4MH9ho/VJBHI1SSsgdzcTklJSW0YcMGyszMHFKr1aNCo9GYEBMTM8CJvMpDd05jDQsLew4JaG5u
+        po6ODsVytgVK3V6Ki4upvr6e2tra6MSJEzY5efKkInV1dcI5w9lV8E8MCnu90uwqoTTT9lJdXT1mkEQk
+        gHlbHL7jwQnoxcOvXbtGZWVltHfvXpugpEcDBu0sCgsLpQR8IA7f8eA1dbq0tFQ45TU0NCjOuITSjCph
+        PnPOwmAwSE11hTh8x4MTUKXVaoewBFpaWv4n4hBRQq/XG9HpdIrw4epLroBN4vAdD35Y9saNGwfOnj0r
+        DGKsjQ57vi127dplZOfOnRbs2LFDIC8vT5Hc3Fzh3yMjIx/xmPPF4TseXAFxeOjNmzctjsP2zLB81qzN
+        HA5FoLKy0gScE0B5ebki6Enyr0FcXNwTXgKN4vAdD87mEi6rJzgMtbe3m8jaKlFJ1pqchCRpLioJof8o
+        Ya3x4kzBCegSh+94sP+7jLD/NjY2mpSoVJZyUI45ObmUk8t/ytDy35mj0eaQWqO1IFutMZKVrVYkMyvb
+        gozMLFq3PhG7wAPvlNPjR4uv74Gvi9ojsWjRol8gAegB586dE2bV1ixuy6ug6WF68gp99nh7efmgp0q3
+        UFQfDpZ/GQnADoAe8LTmFbJxL82OqKYgzSfPHLNU1UOeobpyUd0Y4zgBgyj/rq4uq+tSWoN+66toSVor
+        Hb/8D2q99ICazt93Cs0Kf+csMNa27gfkFWwY8grRBYreI4E1hdLHhyK5rJyioiKB92N0tCa/k1r5gel1
+        1ymtrmfMbK+1zjY5B0zZeuCakS1y9puSymyuuUr7O/tpV/Nnw0thuWGiqD0S6KpobseOHeMGl0NZWVn4
+        9GYkIyNDID09g2aH62iL/iI1nLunKGUNJUkJE1lgRdYeYSP7rlEyy6+r6qbDF/5OcUV/pqlhVQ89PMjy
+        kyRXQBOkL168KGxpe/bsMSI/7GjyCoQs5jX2kP6TPkVRCSVRCWuy5sImskAUtZAFLCyRInCV1lZ2C8/E
+        Mvhwc8tjz1B9vahsGpyAwnXr1g3iZgj7vVxa3gA3Zw4noOzE36j4+E27hE1kgRVZC2GWsioskx0RHhHH
+        zCewfFz5JdpxuJeqO/po5srqAS+VLkZUNg0+DaauXLnyS9zjQXrbtm0CW7ZsMUG1PocfZKD9n/bTzpZe
+        h4RNZIEoaiELRFFL2WFhCYjL5UHZyVukbbguTNw0lcFTVDYNTkD4smXLBnEWqK2tFQ48OHubsyyxmN5P
+        qOcE3CF14+eWwjJZm8IsZVWYpawLj8jKhSXQ8OTyWAI1Hf0UXXiWpgcb/o3DkKhsGrwE/sTQ0aNHhR6Q
+        lpZmrAKwdetWgQXRxRSQ3kbV7f20ncvemuxYhU1lTYXNZeVAfFP1FUFYkgd4pqG9jz5IbBnyUulbRV3L
+        8Pf3n4kEYBc4dOgQqdVqRX4bVUWreQss5bKyKgtEUQtZwINSFrY9u3IgbKT6Km3QX6H4ihFxCc2hz6m4
+        9SbNiqgZ8FTp14u6lsHyryMBuLPD9Th2BHPSM7OFI3CKrovyj9xQlLUQFkUdETaRBSwsgVlfX3XZQlyi
+        4OgN2r7/irD+PUMMM0Rdy5g/f/7zSACunXAgSkpKEkhMTDQSlZAqPEjb0EM5TV+McnZNhZVEJazJSsIS
+        mHXzkpeD/b+Ed6rwHR22178UvAz+hTs39AH0ADnbt2+nsMRcLiUD7Tl2gzIOXjeRtRS2b3aBvcIbDSNA
+        TklaDsZRwGOdl9T82CvM0CxqWo+goKCb6PT4ISmEzRugX+xu+iixkfK5rDD71oSVJCVMZIEVWXNhgBmH
+        eLyCrBKZ9Z8JO9XUFRWDnqFVUaKm9eDjcAeEcdHBhyKKj48XiIuLE5gXUUxLs09QXvMXYxOWyZoLm8tK
+        DEtftlnqSiBJWKbxpeeFZTtdVfmmqGk9+CxgYOGhI0eOCOf+lJQUSk5OFticnEIzuQFGF50VMvtUWaAg
+        K0kl6S9Tom4YNDEJyGIfh7C9M60EnqvlHcA/7Tg37sr7iud/8+AmqMXdIO4CU1NTjRUAwmI2CZlMrb4s
+        HH5sCUMUkhgESlaQUdiivkowvnTuU96RdY88Q/T2XaByBSSEhIQ8wnFYo9EId28SATFq+k1UDWXU91CK
+        TFYCwpjB0ZbqVwVOpYmVl4RJY+z7IQpXQJCvr+8QfjiCj8TyLXD+qkL6OKVFmH2pnDdwOaNknTm7sUqU
+        jY74im4+n/RQUPYZeivM8B/vZeUviIq2g7fB3+EsgFtYLAFeDgLhEatoRpiOVLnttIlnP6ESB49uiuGX
+        KdM1QukI0U5gjS32DoMegl4zb/WBwemhhoOi3tMjMDDw10gArqzx0TchIQG/6EQrYrYIJ8C1ZRe5MXUb
+        XyRntaOUdFGUQ1w0gmW4uuQCl37ZE69Qg7+o99QYN3fu3FeRAPw0CJeh0vb3YeROei/+oFBaeMEqc4rt
+        I9IJRBTZZlUxKu8S+aadJK9g3ZevTA/6LtyGFa3H15gXJ0yY8D0/P7+h9PR0AiqViparImhGqI78M08L
+        s6T0UrDSHgptE27kwphZiSQxc6JrB6YtLUL5IwEvio5W41sMvhG/LfIQhyEcidesWUM+EVnCFXhowV8p
+        fM8FChsjoaOhQBmVHeD7ArWdQvef9Pu4AHb6segGR8VKeI55ifkR81OugF58CMIFaYAqRpj9P6a2Kb5M
+        IkROvjnn7WLFWNhtynKReQm1T6YFl91itSlwEt3g+A3GIrBFfId5jXlz4cKFnWh+uQXlNDusgryj6yhY
+        9nBXx1+N2dfRpPdik9lnKpwYVAEcFbfD55mXGSEBPj4+dcHhsY9RQu9E7aegvL8ICXgWCNB+Sp6RVY+n
+        LC287uEx/h32wa/RIAFws5oAfEbGb3X/kJk4Y8YM3wWLYwbEE9Qzx7TlJbdfet3Th128mF/BSXTDErB6
+        H4DMoApeYSZOnjz53TnzfbfN9okzzPw4tnpecLpmlk/MPldkykfR+RPnrk7+2fx1a9+YExo9/oUJmHmU
+        /i8ZrP9XGcz+NxmbgW9AEpAt/Ir7JObnDLKIeMvFwUxjrBgzxg4HuMDpqfJSYEfAnon/9H0G3RMZRLzh
+        4mC8WOsYM76GwwQGTqMOHBrQHLF34iEIPNCVkcaKPzF2mwcfd7jDHe5whzv+r8PD47/Z10ddV5BQFAAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="tsb_Users.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUQSURBVHhe7Zfvb1NVGMenEF7wSo2Aou+IxhdiJPIHGMKL
+        srUEJCMxaoyRxPhKY2xY24XOFyomG/Qa8FdMRvSNWcw2hXbbvXO3a7ux9vbHZRuvQNGB2dh62c3uLdvA
+        cTxPOZv09mnZ2G3HzPkmn9ze9pyd5/vc+5zzrIaLi4uLi4uLi4uLi6sacgjys05B/KLuRM9FhyDNA7WC
+        OOoMSMfrWnqfYcP+n3IFet50NUs5lyCREpiuL8XX2fCHX+HJueciWu77fk2/Fp3Q/4lquXFKa2Ry7nk2
+        ZEl587jpYpAkeIaTL3jVxBlvRhl3K4MLcG1QldYGNV60VlUUzeYORjV9lhomxdDv6e9saP61v8+TL6C2
+        OWQcPNH1NJte48sk673K0JxXVYgVd0aZ9WbiS2tVRZEbxkvRrD6Hm7+LfF2fH9CMF2E81DxmtBzOgPgZ
+        zD2qJnZ51cFbmPlF6Bsx71ET+bWqoqhmdGCmizF/hvGw4WEmy+EMdA/DXG86cRYzbcWTUfJrVVwyIRvv
+        9/QX6dP0m22EbICdHjNZlmZpzj86ugmeLmYY4WZ9W9sGFmbldH7C2IaZLUVkZmbLgybAnUptR4yWxJNO
+        b2FhVk7Jv8nmvgn9Dma2iAn99ighm+CcR02WoVboueBPJjd7lcE7mFkrblW5DW8MC7Oyik6ZMdRwMb/B
+        eGhyMJPlcArSpzDXqw7FMMNWPOlEfq2qKKKZDsRsEf1Txh4YDx0eNWVaTZbCIYgztafkp2AuPecdmGEr
+        PjWZX6tqimTNY5jpJbKmhw3NC5obzCyOeJhNy4secccw0/+RKFiraoreyLlow5O2mE/FNLOWDSkQJAGa
+        HNz03SdvNb8oatLlTSnpe40fTcdTDWkFXauqGhg3toY1Yydc2VclBR0eNDlwzsNOD8CGBzW/+NqXk19V
+        tzZeUHbClX21toK+IKbP7ghPm7vgCvfsJ9vll+WNvhFlB3SHcIV79lP1Fc0ae2lH2ClrM7nCEjDMfs1o
+        X9wA7ZAvndjrUeOd9Eg07y0BuPeoSntVN8BBXX9iJa2wPD39GJtK/yPs3UZr/ENXQAy5hO5rzubQLQA+
+        0z0guD8gfuAQQkvNTMPw8OO09jsKTJcAWmF/JrO0VkUENU6NXSw2iiNNmeTbK9N6c+ryK7TGA/maRza/
+        Ak6GZmmCWt4Kxna/0S/p7nQcNYySUkZo8/QkC9deQU+/ggaISJMGafldI42pq+TAd/ICarYM+74WF1xn
+        g+RQbxdxp4dwwwi0VGQ/IY+ysO1TRMu9jxnFCGdzJPCHRnzKGDlwug81uCxOicT1a5DU93VTYwnUMAbd
+        F95lYdsjQsgj0SnjCmYW48yYTj4ZnSCvfSPjxlbCaZqErnPknVgfahYnfomFbo9iU7ndmFGM3kmTHL+c
+        JW//pOCGHoTWbrJfCtJSWMF+kIm/zMJfvaix96xGS/HjVZ34kmO4kdVAS+HIQBg3i2BrGdC+vhEziyHQ
+        2j/SnsFNrIYfuslhuQc1i5JRfCz81Ysaa7IaxQhnTfL5pSw5ZEftW/mK7gXiOXreL28zpH1BEwt/9aLm
+        lpWAHlr/TSPjuAE7CAXJx6nlHYlrkoCu6wY9+v7Cg7eDX0Lko+R51LCVNUuAJ/4nHrwddK6DBDQMVTAB
+        HTwBPAE8ATwBPAGoYSu2JmAlqjspvYoGbwPwt9kyD694AngCeAJ4ArDg7WBdJICLi4uLi4uLi4uLax2o
+        puZfupG5xK06Kh0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="tsb_AddUser.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYQSURBVHhe7ZlpiBxFHMXHeOIVbz/oBw+MwVti3DlWY/wS
+        0XigxgvEK4IXCgpqRLOiiBGPme5ZIwtqDCKG9Ug8iUYQFXFnuhON2YCCJ0YEg0eiMYEc43s1Vaa399/n
+        zO4wph/82J7qqn/VvK17cpkyZcqUKVOmTDu8CrZze77sfNERqs6JuhmdU9F254FGJyhZbl43o3NCQ2IZ
+        ULBrnxQsZ1Fairazxh+zywxwL9JFUilvu0v8MTMDMgOaBhSq7ozmEIlH3nJeVEHbITSk8wYgtv9dJFXn
+        JhW4VSFYVxrQU3Y3tmUZRbDu7AEAe5jVUwbcPVUFaYVAXWsAKVjus6qCtEKQrjagyfLLVSVphAD/AwPc
+        dWfYQ0eqipIKhWMZgMZepoukUqHivivEbJcBjWLFrWE+2FVVlkQoHK8HWM6DukgqIcZP/phtNUDhPK4q
+        SyIUjGdAxf161uDgzrpYIhUtZ7oU8z8Dqu5MnDX+bpUe211fqjpnqUrjCg2JZQDBsnOXLhZb0xZ8uEe+
+        4jhSPGNAR4WGxDagaNe2YihcqotGij2maNUXy7G60gDswOzaprjdDGNyQIph8BhwEuhvM1eDaKEhiQxQ
+        lGsbSrZzgw4xSpiNJzbvAISyHjwGcIlttJnNoAjChYYkN2A7L59uDe2rQynxS+E//72QdxRjbAD5AewH
+        goWGtGJAo1B2v+stOz25vsYEfKE5mIk3S/kkxsEA8ioIFhrSkgEEJ7MtXCald2GMkwHkZiALDWnZgLSM
+        owEbgXx0RkOSGYAJMG+5w9h6LuMShw3IUPOmRsgbQQoDfgefg3c0fGaalNfPajD66IyGRBrALs5rqJK1
+        /HxubHTREcJ2djK4l3OCFEMipgHrwZOgBCYAv5jWC5iHeaUYhjlgpNCQcAOs+tJSf+14nT1Sx/UN78Yf
+        W7Bf+EOM5yHCgG1gPjgExNVBoAK2An88Mg+MFBoiG1CubSta7txco7GTzkodAbgdfgusAF+Bj8Az4Byw
+        C1DqrdYmRU2MIQZsAJcAr6aAR8AyMKzhM9P4zqvzwDrgjUniG1Cw6tfrLNShgDcvW4A/qBcaciFQ6p3/
+        5f5qvhDikwAD/gE9wOgE8D7w1iPxATgFGJ0M/EMipgFW/Qn9mjoN/Ay8gaJ4CqiTIy8qMFGuHVUHEAxg
+        t/feO1wJaIg/fhCbgHcLPBN4h0MsA1Z5jr0c+1ETSxAcFkq8svLVoRAMeF59auoK4I8Zl6uAEecRkx7D
+        gIpzrn7FJeNb4A2clOuAEm9sRtQDfAbwP32Y+oS5FHDtlmLGgWU5dChOon8BpkcZUF+pk6n7gT9wUn4B
+        e4Ecj9Hb6xENGGg+Kr0NpHhJeA8Y8XTItMge0KeTOZv/BvxBDZ+C2wBvY3kNFTZO1S840/qH9+aPGZ66
+        /AbMaD7mjgVSHMNL4FoNn6U8BrP7Oxvwc7gBhUp9qk6eDvzBDE8D/4ZkMvgTSPm5VCmp3aNsAL+8udDk
+        ZkWKQ2YBv5gm5SVzAcU5jUtruAFTq7UDdfLdQAr4I9gdSLoDSGW4VVVCHc+ZuojHAI55o8VAivMKCBJP
+        fFKZJcCIS3SwAeyeOokqAyngQhAkrhhSGaK2z1heHwowYB/9l6oDKcZsEKQbgVTGBUbcS4QYYLtc7oy4
+        nZQChv0sfSqQynBtV92bO8sAA7wKMuAWEKRbgVTmM2C0FIw2oNdacTAPMsVynZOP0T1ACrgGBP0YeR+Q
+        yvwKlHh7BA438NygX3kVNATeBEHiO6nMa8CI54QRt1dh4qWnFJAsAP5fYHj3FrQSvAGSKMhIIl1sME3K
+        SxJf4xtx1lwLpKBkFeCSyco5L4SdEbhcJREnRCmOgev7nRo+S3kMx4DUChoGSeClZNCqESb2GileEsJW
+        jVjizM2lQwoel4tBGk0CZvuaBh6FjwItiw2Je+Xk51HQinisDrrYCINleB/QNnFMfgOkyiS47D0A2qEL
+        QJKewKW8rV/eaCJ4DESd0GrgTNBOHQ0GgVSfF+Zh3jHVAeAa8ALgDQw3Gq+Dh4E5R4yVOKY58y8CH2v4
+        zLS2jPdMmTJlypQpU6YdQLncv8wgh8xyAs9AAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
