--- a/CUS Tutorial/frmUserManagment.resx
+++ b/CUS Tutorial/frmUserManagment.resx
@@ -117,4 +117,167 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="tsb_New.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAb0SURBVHhe3Zt5UFNHHMefwEzRUWzAdgQVqYoKcgieyGVQ
+        BLnBcCkQOSQQI1QBOeSGEMR4Hy3aoVqrtQUkSIscCYc6VetRp4fjyPGXM/5RcRwVmani626yUcGtEMi+
+        JH5nPjOw+31vf98fecm+hFCENYFlyjK3WzM/3Je3ShQr9JWkVUXeKaxLeLi7STAgbucPQuDPcAzOQY9P
+        olOZPXtuGMvMcBY6j05Jz8J2pltQquuh7HPRPeJLKfR4yDrN7Q5McT84x87UBZ5bsYQWysjIyJi9aUlW
+        5tnNvbgg6gA2Y3XkksypUykWWlbzmjx58jRfnnOFqDm5X9y5jWaC4l+SnoNLqhw2HZWhERm4cWxTCy7w
+        nuwBRWmCAkncY+cQGwGoRV9REkOaPtvYKuV46A1cUZpAcCz0momFyQJUHlkt9baKE11MHtjTKQCLaw9l
+        zUn9jt4LuahMIjIISnU/WgEW02YCwKsPqFXtl4QhV+TbUNG5FSyi/XCF3hJYs6L08ctwy96AFtxC2kxc
+        hX8TrF0RYewy4Ip8GnZ38GldJKbUqw5kGPvlAHZzR3En1iX8BC4HUBzVtNzHKr68I5n+GHDwmh+NYo1O
+        8HW+tDFxAHcyXaSkKbZ/mtmU+SjeiDIQVAbdKO9IAgeT5fCvO+Xg5tQN/3DgVZBt5OcDZ7C9FYEDSHP6
+        dzE9+PoV/er1S/rU7d1Yj7pZEbiIj2LiBW9sCi7EPBG1gwMI09lbTyvV3nMe61E32fXRfR+8k1zPW1Eh
+        aucBM3mGNqAO6yHBuvhlQhR3qIyMKOOiJm5/GTAxwfAG4DwkKPyZ+ww8Cj5Fsd/KPXJxVll7IjAxQ2ev
+        BMVXXAI4Dylcw+0zUOw30ss4G9GLM5NCkw1I+z6iC2ZWRAeysJ3uJmzfQjNJxzsNaOupxXpIMtvmcycU
+        n6L8BE6HhG1ggkHeawDGQ5L1SSv2ofjUhLRTYT3CtgQwwRwdvXUovrIBeB8ptp8MvidPzzI1NC8FA0wz
+        vAE4D2kmmkw0oxatnhte2hYPBphlaANqsB7SWLt/waE8E5aKSsAvTNP+TgNkoAE4D2k8Yh1LqIjitRLc
+        JGm0oQERRR61VPLxgDslbXFggFnae8+j+MoG4H0k4VcG3qZ2Vkc+LJbF0UwDNz9KybprsB7SpJ+JeEDl
+        NGwcKJbFggHV+fZmmfwZHIZRld6+v1F8mu7p+wvrGQm4dtXNUmxtoyGvMeYFVSSNGsRNjsTey6n0q8GX
+        KILmBGsQX9qGrXEkYHaqULppsEi2mVYV8eUUrWjAy8F/6YpLAmyNIwGzU9kNkQO4ydHwzY1iurX7J1ra
+        Xa0y3X1/ogg03fXoD6xnJODaJ34rxNY2GrIaI/upjOqwh0UyLhhgFnj9KiUFQXAe0qSdCX5AJVX63ymU
+        csHDgVmGNwDnIQ3v2PpbYCPElhRKY8AAs8Dtr1KKBuB9JOEUuNVQHrEOZbhJ0mhDAzxiF5dQNm4WYQXg
+        F6aBuz+l4JMZzkMaaxdzDsViGc4qkEaDAWYZ2oAfsR7STJo2yVT+nkDyd37d+WCASYY3AOchCb/K/648
+        PJT31qUH86VRYII5ZD3VKL6yAXgfKTx5DmIUn6JmWX/mkt8KJhhEBjYySrV2gQZgPCSZsdB4JYovl57g
+        VEBPXusmmingTk6plq5zWA8p+CcD7oPMExTRkZzCrTNxZlJosgFOoVbpKPZbwQ8Ns+pCnue1bgQm8sDX
+        fqUUDcD71E1mfehTikVNRbGHih2/uDwXmJhgeANwHhKs5tqVoLjvC35A+mVNyOPc1khgJgt85leq+f5Z
+        rEfdpNSE/IP9YPRdLfG3FOS2gAMIU3k9X34vD/nqWi7Wo24cfCx5KOYHpb/58Nrru8ABpFF+ToebUzdR
+        +z2ugGyj+76BidmUBZkNwS92tUSAg3Wf9PqgZ0YzjeaheKOTracFNwcc/DFgzZ69EcVSTZ58x0M5LeHg
+        JLrLmgT7t1veMUifU+AswZ1YFwjJW1UNMoz7e0aG4UK3puzmMFqXCC12bQS1f6KIMH4ZbshbVYdbSBsJ
+        ypH/5dUWXin9NUn2B7KbQ8Ei2gtbcc2T+w7RIrZ59I7zIf1ZYDFtIrU2+PmYn+1VFfzH4+j9Hlezmjlg
+        cc0TJWZfUfl1Xg3Sd/SbxxfU+PfhimKC1B98Htn7zIHbW819oxTeQLlybYTbJX7PMkFRTLCtJuipC9e6
+        BNzUfvjGhlGBYpZzLDMSq7y6Mps20CSIP+F1f/kGy/T/vZ/XEumZLWQ5eSTa7dtSufYeLogqJHy97i47
+        wVaM3sMb+jaWLgj+K9oClxkc+JANzFtZyz3Cvs0/s+7Bjgu+L7Zf9B+UUxvYD8dijrjfCspdVgO98Jg3
+        79sTE0X9BxD66Nj2Z9DPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="tsb_Save.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQlSURBVHhe7ZrdTxRnFMb5Y0joblyzwGpvpPHvaOIFFzRp
+        4p2JiVe7EmNJxGgLBWt7oSYqbWNVCmVXtJuV1YaP0gZYiCwtRfyIgIle1ia8nTM9s54dHuJ4dnbcsfMk
+        v3jFc57nzLwvMUNTpEiRIkWKFCnSm7Tv/INk+8DyUOrc4rNU3+J26lzZELFMzubw1Rmz9eKlzczcgrkz
+        8YsnnJ95Gz69PF2Z2z5YznDE+ik1UD6U6iu/ckpL3vUCKENdl0BPfrfyxG4LmJic8YQs5hX3Aoi6LeG/
+        135ncQe0gOE7P5svL1/xhCzmFbQAoi5LsM+8GOKmkRZA+L4EeeEhGm0BhK9LQAMkjbgAwrclIHNJoy6A
+        8GUJyFjiBOm6NF0JmL1bhGXdfP3d91XFvNJ5YdLTAgiuoRcylThBDp7OVwIurz00g1eHYGlJYfr1W+OV
+        TYsDp/KNtwBiePavStDy2rrJFe+ZH/P5HYwWCubX0mJVMa9cm1mtmokySbiGXshUEj8+XgnzUW/eLD3a
+        hMH9oLS+WfX04923YSYJ19ALmUr29BQrgewlWAFvzK7aryoqoYG86MnL8kSi5x7MJOEaeiFTSVtfqSqU
+        Q4cVtvPipH1j1wJdeO7iDm39CzCThGvohUzdJM/MwoD1JHn2N5jFDdfQC5ki2vpL9isZ7359J/gNnXma
+        4eXJO3ANvZBpmOAaeiHTMME19EKmYYJr6IVMwwTX0AuZhgmuoRcyDRNcQy9kGia4hl7INExwDb2QaZjg
+        Gnoh0zDBNfRCprvR8c2K+eTGmjny00NzZMxnLM+u62v2DDR7N7iGXsjUzYfnV0z//afm8XP831k/efT8
+        hfm8+MTs/wpnccM19EKmkn0WNxc2YNh68sPcBszjhmvohUwlx7LrMGAQHLVmo0wSrqEXMpVMrGzBcEFQ
+        KG/BTBKuoRcylTy1ziQKFwR056BMEq6hFzKVoGBv83ncK7NzJTgLZZJwDb2QqQSF+t8vYGnlTzuwnyz9
+        sQpnoUwSrqEXMpWgUEGCMkm4hl7IVIJCBQnKJOEaeiFTCQpFR4DuAT8hTzQLZZJwDb2QqQSFosDoIqsF
+        ugfQLJRJwjX0QqYSFOq9WkD74DI0dkChggRlqjD4oPYFtPbNY3MGhQoSlMmh7Yv52heQ6LkPzR1QqCBB
+        mRwSJ/LbXEOvWHp0q/Xs73AAgUIFCcpEJK3MsXRug2vo9UEm9y19mNzbO2WdqZ33AQoVJO487da539s7
+        aeKZW9YCsle4hl7xdC7ZnB55ZX+hPT5u9pwsmMRnRfsPI4hL41PvFCdHgv61stnFrayUuaX7VoJr1KZY
+        ZuxQc2bkH+cztQT9ygoSlKk5k/u7JZ39mOP7I3oTWtK5oVgmuymHoVBBUsmSHtmmM0+vvW9PPlKkSJEi
+        RYr0Hqup6V8uvPG4Fu3qVQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="tsb_Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAokSURBVHhe3VtrTJTZGaZNummbtE3bf23TpE16yaZp0h9b
+        dzVCbdzEFoTBavfSbFvX7tbtNtu03XYbbygsyMXKqrurVGRmgJlhgBXE++INkZsuCiggIBdBVBREVO6X
+        t+9z5gwMw5lhhrmBb/KEyfed7zvnfc55b+c7BPlbwvNTv7LSnP69lUbdTyNMaYsB/MY13JPNng5Zbd7/
+        jXCjLlJj0u3WGHRnw0xpt/k3OYNow20jTLpdEQatJtRg+Lp83cIQjV7/zQiD/i8RRl2ZJn3/hEpJt4B3
+        ZOpKNEbtehAqu5l/EpmV/hNWOjPMpBtRKuIFhKbvHw43aTPCzQeeld0GXsLNqT/iweXZD9ansKys3FWG
+        tB/IYfhfwgpSvhxh0sb5csZnA1YEr7ptq83mL8lh+UfCjfqfsU02qQYVEBh11xFJ5PB8KESfg4MD88qB
+        BBAcNQZ5Ut6QI/W+REVFfR6hSdX5vIJBm4SxymF7R9ZkZz/D3teo7HA+wpimfzMl5Qty+J4J2FxQylvB
+        JHi+EmDzC2HZOwBHiESpydyEX/KW/UsXGjhUr5PquCcIdfPR27sL1mEAWapUyzVBkjOv4ryHWJmZVvcH
+        rfaLUr3ZhZWPVb1oIYNNYbNUz7msMmh/HMj01ldAooQ9B6mmY+HG/i1s/AiOCiapplrgLFQPPi0INenG
+        NSb9D6W6MwX1vLWxseYKFbU1O8TZ1hv0xqEcqr57m3oG+qn+fpfX0Ts4SAUNtTMU8QhGbZpUd7pgJ8fW
+        9j+pq6GKW+0OUdbRRn8uyKXhsTHq6HtIxxrrvY6+oSHq7u+n32TpZ2A1Y5WtYi4CvmBNdsrXpNpTgipP
+        9cBs6ObZP3D5ovKep2jt7SFnMj4xQaXtbfR6frbyeUdQJke8/MvsG2Kmbz7sVaKt9wH97fghnxKA2R/h
+        FZZcWkQZ1ZWUWlkhkFl9mfRVlYzP6BavvjuPH9FrB03Kdyhh0J2ValsEm42qDcw95Rco62qVEvAR6NSX
+        BHQ+6qNHw0NUefuWnPMpmWAcaaijP+Zl0f3+J1Te0a58hxLp2tFpW/By61rZONLO9myB+/4goOB6LZvD
+        A3r7aJ7AvwuP0ocVF2h0fJwudXbQrvJiQUpC8Vnle1SIMKT9WqovYv9u+wZWwMM7kvd4IP4gIL/+GjV0
+        359x/xBfn2A/AFO82nVHkGSdmFlh0CZJ9ZkAtgllI8Z/Co/R9uIzMxB7/jStMWcElACszqaebhGK/8or
+        Y2xinD4sK57RTg3tCak+Fz8m519s3jpykN49eXga/nHisBhAIAkANpw6LlYjJuQQm0of5w4vm1xYBRm6
+        VqE8nIGygUQkY3B0VHRiL+g80AQAl9lJPuZ2a9kh9g0NUvbFcgrTpSjbToKdvqgQUSAoG9jg9+zt3+Sk
+        xxZ/4iwQ5PiLAMgNXu62QPh7PDws7qHdyzmZtPdSqcgPXtm7e1YSQs26bwdhP1110xZQNPHCOfroYskk
+        9lSUiA79QcC7J48IEuyBdLy84yZFnyukVdL54S/yh17GSx/vckoCKt8gfJ5W3bSFcHb8QpiCFf0jI8IX
+        +IMA1T1niD5bKBKkfl4da1P3UagDEiKz0p5ziQBn8AcBWIEPBgbE0gaGxkZp3SHn6S8mDQlUJ4fGpbFb
+        lSQIAlwxAQDx9ZO6q5OFCrKwtflmYX8QFC7eBpRFsoP+t5w5STtKigQQhhGB7Mdoj3VcIyA0/isrk56P
+        3jyDBGECrjhBYE22hVFrqXrt3l16+0ieVJ/EbHkbVlGNx1VgrIgKP9+6gZ6P2TSNBOEEZwuDs0FlAqgR
+        sq9VUyOHLhRNZ9hZIW+wbeMKQIIzHwAnnM4FEZREgVbS3kqbTp+Y1ubTG41U0dosCJgiYd9UGIS4cnQF
+        eDXXSFWcdaHDWqwAzr5AwMkbDRyLO0Vp+k92jLDXuxyikJiAiBp+Binrvktl9M6xfBG30d4ZUGw5IwA+
+        4Najh6Kvo2ySKNAucvWKfnJqqyfb5dbWUFPX3UkCrCT8Km1vp1Ae4iwVtgXMIK/e4gcslZhZEHCYfxc2
+        N4qBdLHixTdbOSkxk/laFbe9LsJYctl5MbgkDqefMmFo7wwfXyx1SADsv6H7njDDV3MMFMX+YS+TC5uH
+        r4DfgK9AW0PNZerk1WFLALAkPqpbqh/EkWDun79sTWA3l88IkSAGs4NVgNUyxgNC1oiY/RlXb/bvcITb
+        jyyJjv11KAnBjhRmGKXxwOgIPeG2qAlQPcL00BYm0sXvsScgOCmuQqqP3SCtxr4TR8DuC9JOdIiZtQqW
+        Leryjr5eZv8cjYyP0Ss8O3gGS7OMlcdGBsiwX+6OAIFy1XduT7tuIcaS+SFSYHUhAUJhBHP8b2mReLaK
+        n8MK6uKVZE/AL5IToqX6QUE4iqbaEFEBHaFDbJZgALorlyaXLfYG4YziuS6HolgJiOHwATCLzOpKGuYY
+        XnCl0iWcrqul9p4eOlp9Zdr1OiYBiv2WTRI7RvsrK9g/GUTfME0rAXiujv3Nhpys6QRs20DLU/d8S6pv
+        EXEUzU5Zd5GEmecBwUHBRvtHhukerwqYxd+PF4iy9Ux97fTBzAHrOLuDYB8Aylvl3pPHokbBZNQySapn
+        gUXbt/VKtadEY9SuVynlDpAstTzoETP+OidJKEzghNZzOY3Zh3P63d49ykG5g0VbN1JZc5Owc5CNaBRT
+        dIpNLlPsDsHZvpOhUz4LhOyM00u1pwT7gt74GoxvBTAFzD7C4pmWG8KbD/EqeC/boBzQXLA8IYau3uoQ
+        JoXN21MtTWIXGT4h8ViB8hmBbRtp+Qfx35VqTxccQlQp5S4QLrEzc55DYEVLM+kvFFF4cqJ6QB7ghehN
+        FHUwR5jVpbYWyiovpZc++kDZ1oqlCdENUt2ZghOYKoXmijDd/zjp2KwcSGCwkUJ2Ja6Q6qqFB55rr4gn
+        mE8kLEmIsWyDORMcP/X2yZD5QAIc57Lk7cFSTeeiMeqiVYp4gkCTEJwYd0qqN7vg7C2On6oU8QSBI2HL
+        0OLUBPf+GcPyHx26QZUinsDvJHDYW5a8I1yq5Z7g7K1KCU/hTxKW7dyeKtWZm/CAd9gr4A2E6X1PQnD8
+        ++VSjbkLjptqDLp0lRKewpckLE6MbQwiLx2axsFjnL1VKeEpfEEClH82O/sZOXzviGUlaJNUSngKb5Kw
+        NDG2zGszrxIcL/FJdPCQhEXs7UOS41PkMH0rOE6H46cqRTwBSHjh/S1KBZ3hubitg79MTtDI4flHsKWM
+        46feXg1ukcCzHrwj9rTbSY43ZZXhwPdxAtNyCFGtlLuYjYRFjCWJMa0v7t65RA4j8IITmDiE6K0VoSIB
+        do56PnjPjhdlt/NPcAgRjhLfGriqHFMp5yqsJCyKj3oQsjNeH7Ir/juym4Uh+OyG01iW8Kk9gWMpTnef
+        cQ9tuC3+3SXSqF2xIiPjq/J1T4fAeeKjJL7M4vM0gN+45tY/NXhFgoL+D203MA6JHtr2AAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <data name="tsb_Close.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAlaSURBVHhe3Zt7UJTXFcBNM21n2k6mnXb6ymSm0/7R6TSd
+        JoGZZOKMMzERH4THwvJGUCBKkvrOSAYNiFRQQxSkBPLwEWOMligmVWNsFK0S8YEICwgLLLvusk8eYjtJ
+        WkdOz/m4uyzfnoVdFthdzsxvgO/ee+455zv3ucuc6RaLxfLL/v7+eKTAZrMdwZ8N+ExnNpsHkPvI//Dv
+        fnqGZTf6+voOI/mI0mQy/VyoCR4BgIfQ+KfRmTKkDQFfsFqtKvy5C4MXSrpFN4Eng4ODP0ZDc5AOu/HT
+        AAX0NQzwI6Jb/8vQ0NBP0ahtyJAwctrBYTOIPwvu3r37E2HGzAum43fQiJU0lp2Nm0lwWNgwGzLIFmHW
+        zAj2+3s04KrcIH+B9tRhNvxOmDe9MjAwkIKd/kduRABAQzBOmDn1gmn2MHZQ7tRhQILZ8NaUD4nh4eHv
+        o/JqeWeBCs4LH2EQvifM902E82flnQQ6mAmnfQ6CSPugefNyRCZMfjigkoAf8xNBc4JwxzsRsz2rNNjA
+        TFAKtzwTsc4H4lI3WYY83ifQmMEGAbPJmSrwpV5C3yY+TGHlFfLGswUcCunCTV7u3bv3s6nc21++1gDJ
+        a3IhNGopPBWRIkG/f157ia0/3WAArHRqFe66ClaiUx3b2Fta2tUwV5khOf1c8koIS3tFYsny1XDp6g22
+        zUyAQcgT7o4VcZ6fsiPtW+8dlJwvqtjLlvsLcfv0I+H2qGAhXWawjSbDppK/SQE4de4iW+5PMAvWCbdH
+        hGZHLJj0TU7ujjJ451A14OHc8WzTm4EbALpmG7MiYEToDo+t7AlzY9LgicXxsGrLDjBWHwZ9VjKoM5NB
+        lZECGvypfykVLGdOsm39BQ75J4T7UvrTBSZb0RPsAaA3/kmCEu4kvOiC+ciHbFt/gS/9TeG+FACfbm+d
+        A1AeE8sGwHq9nm3bazRJ88W8hCx4JmbZhCxa9hc4UH2C1eUNGIBGyXmcEenenq3kKfYAhGAALsRFuQYg
+        RQF9FgvbNmd7qRQ4bznxxXlWnzfQhS69ffrQgq3gKRSA0BeTYG+swtV5pHfTBrad1WaDkPBE1sGJiF25
+        jtXpDbg9jqYAFMgLvOUL3Nl1VJazzhOmfVVsO0xDePz5SPjzQiU8GZ6EJHtAIvxpgQLCUlawOr0B+99E
+        Jz/6uIqt4A361Vms84T1ovt0TVm9Ef44P8JrPpiCeQA5SBnQIHvoETZ1B5g/Pgi9RXlgeO1V1nGJxAjo
+        0+tZHQQNg1VvFMHTEQnw1IJoCAlTuCU0LBrmLY6BitRU6M1dB6bKMrBduczq9ZB6mgTpQ0mukKVP2wPG
+        XcWSY86OdseHQ1vMIriN6BLCHc8N619m9cjpKt4CjdFhY3R6Cr0Aa30dq3cCOud4c/rT13wC2mXxLgZ0
+        xaHzy5eA+VgS9FbFQXP8QkcQTBW7WV1y1Pmvw82oBS66PQZfiPnQflb3OJgpAPeZAhds3V3QgAaqFAtd
+        OlfFLoT+i0th8EqaRM82BaiVS6Qyy6lPWX1yKADXI1+AJswCDWaTvA8Jyjo5sjrmvfyE64avKQAPmAKW
+        psRIycjuuCVjOqUADFxIdQRAW6iATuXiEYNqqlldcswN10CVFifpv4H0OAXBkKaE/vXZMIDDyYW12aDH
+        fYa9LmE5/RnbhxxcBb6lSfBreYE7DJ8dkwy8FT02VSkgremLcVJMAkOFElRxo1li3FnI6nJHd0mR1EeH
+        CCChwwCos9OhM3sZQzroUqIddQk9DlOaqzj9MoYoAEbZQ7fQaa8+SSEZqHYykNBgEGgC7IhdBFqnSVCf
+        HA229jZWnzsaMMBdzlmGqW7KSARTZpILxoyE0XpOmN4pZ3U7g6dCLZ0EG7lCDrrcUEbFSylKE5Yu3rVj
+        DsPGVdBvNLI6XcBlsUWuF500r1kJFgbTmhWgS3c9gOnT46DPbOb7GOUqZUCN7CHL9VvNEBKZKm1DT8SO
+        zAX0xuUdu6MXlypbSzOr2xnL5/9waatLjAINHrG7GTQZSbjijK1vx3qplu3DDm0CKQBF8gKOoor3Hfvw
+        D/YfwjQNw0xYMGaymhBMZWPhZrAcOwKWC+fAWvcvB/S36b0KnNDGjmdfMB8c/zoOsz+fAuDRYSgrZ6vk
+        PF1snvryAlzZPLJs0bLo7g34G+Pu7awvduyHocfkBRyZOQUiAK9KATh19jzcVIZLQZBDcwT3fKZpXbGU
+        9cWO42t4+EenvFDO1j3vSgGgeWD/0RopCF8e/hgu7yyGuh1FcGZzLhRGKWBbdAycWL8OdO9W+ExLaQls
+        j4qWOJCZCV8VbnGhMiVVKi+JiQVNVflo+/crwdqqYn0h8O03S86T4INSeQU59Q23HHMADYP9fx8JArHv
+        6HF4IfVlR4BowuR0TIa0DXkOvbk798DJf9ZKfX565hy88kaxwya6hOXauwPH/3bhvhSAufIKHPm7qxwd
+        hkSkSh9y0BWVfXUgCjFTuLaT5Vpjs3QVZtc/Lz4LIl9aC8/GLnc8ez41G7o0Wra9OzADQoX7Ix+IYkS6
+        uIrO4MYB8na97ejYGQpCQWkVKWbb+sL5unqYn5LN9huRtRYamlvYduPQ5vJBKQYgD88F9CXECalvaISy
+        fYdgY/FuyEH24O/XbjaxdaeKHp0OPjp+EvLxBWwoLIGtZVVw/PRZMBgMbP3xsFgsrwu3R6Wnp+c3TU1N
+        w62trTCbaW5uHtZqtb8Sbo+Vrq6ur7hGs4nu7u5a4a6r6HS6387mLFCpVA/u3LnzqHCXF8yCo1zj2QAO
+        8wPCTfeCs+N31Wr1PU5BMHP79u1B9O1h4eb4gkMhrK2tjVUUjNCwxtSfJ9zzTHCyqOSUBSMajWZy3xXE
+        INzkFAYTOKfVC3e8F5oPOjs7DZziYKCjo0Pr8bh3J7hDfASVWeXKAx10Hk+7ph8KN3wT+lJRMGVCe3u7
+        rre39wfC/KkRGg44J1znOgwkaDfrc9qPJzijvk37aa5zf0JLHW50SoWZ0ysY5fk4xgJps3TX63XeV6E0
+        w2z40J9nB8zEBzgs96EtM/tvc86C5/HHMCMuzmQgaAhi8M/hjvXXwgz/C52y8G3U4Az8X87oqaClpeVb
+        HOfV2M8vRLeBJ5iOD+GbScNl8yoa/Y3cCW9Bp7/BDLuCjieTbtFN8Aga/zhShNTS+oyT57/xZHbfeSWh
+        3+kZlVEdSm/kr+j0H4SaaZI5c/4PWwo2MZGSYHgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>56</value>
+  </metadata>
 </root>
